--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -50,15 +50,24 @@
             android:background="@null"
             android:scaleType="fitCenter"/>
 
-        <ImageButton
-            android:id="@+id/btnClear"
-            android:src="@drawable/ic_action_discard"
-            android:layout_width="0dp"
-            android:layout_height="70dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:scaleType="fitCenter"
-            android:layout_gravity="center_vertical"/>
+        <!--<ImageButton-->
+            <!--android:id="@+id/btnClear"-->
+            <!--android:src="@drawable/ic_action_discard"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="70dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="@null"-->
+            <!--android:scaleType="fitCenter"-->
+            <!--android:layout_gravity="center_vertical"/>-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"
+            android:text="or"
+            android:layout_weight=".5"
+            android:layout_gravity="center"
+            android:gravity="center"
+            />
 
         <ImageButton
             android:id="@+id/btnYeah"
